<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:text="@string/mainTitle"
            android:textSize="24sp"
            android:padding="@dimen/std_padding"/>

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            android:padding="12dp">
        </View>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:padding="16dp"
            android:src="@drawable/amiga500_system" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textSize="18sp"
            android:padding="@dimen/std_padding"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nameQuestions"
            android:textSize="18sp"
            android:padding="@dimen/std_padding"/>

        <EditText
            android:id="@+id/firstAnswer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/nameHint"
            android:inputType="textCapSentences"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/firstQuestion"
            android:textSize="18sp"
            android:padding="@dimen/std_padding"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/question1radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_marginBottom"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question1answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1answer1_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question1answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1answer2_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question1answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1answer3_txt"
                android:textColor="#616161" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/secQuestions"
            android:textSize="18sp"
            android:padding="@dimen/std_marginBottom"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/question2radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_marginBottom"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question2answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2answer1_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question2answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2answer2_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question2answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2answer3_txt"
                android:textColor="#616161" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thirdQuestions"
            android:textSize="18sp"
            android:padding="@dimen/std_padding"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/question3radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_marginBottom"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question3answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer1_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question3answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer2_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question3answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3answer3_txt"
                android:textColor="#616161" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fourthQuestions"
            android:textSize="18sp"
            android:padding="@dimen/std_padding"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question4answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4answer1_txt"
                android:textColor="#616161" />

            <CheckBox
                android:id="@+id/question4answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4answer2_txt"
                android:textColor="#616161" />

            <CheckBox
                android:id="@+id/question4answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4answer3_txt"
                android:textColor="#616161" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fifthQuestions"
            android:textSize="18sp"
            android:padding="@dimen/std_padding"
            />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/question5radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_marginBottom"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question5answer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5answer1_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question5answer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5answer2_txt"
                android:textColor="#616161" />

            <RadioButton
                android:id="@+id/question5answer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5answer3_txt"
                android:textColor="#616161" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/std_padding"
            android:onClick="CheckAnswers"
            android:layout_gravity="center"
            android:text="@string/checkAnswers" />


    </LinearLayout>

</ScrollView>
